Little tests Apriori

--- a/DM-DataAnalysis.ipynb
+++ b/DM-DataAnalysis.ipynb
@@ -16,10 +16,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./data/groceries.csv\n",
+      "./data/groceries_aligned.csv\n",
       "./data/test.json\n",
+      "./data/train-clean.csv\n",
+      "./data/groceries.csv\n",
       "./data/train.json\n",
-      "./data/groceries - groceries.csv\n"
+      "./data/groceries - groceries.csv\n",
+      "./data/.ipynb_checkpoints/groceries-checkpoint.csv\n"
      ]
     }
    ],
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
