--- a/Src/Sintetic Dataset Generator.ipynb
+++ b/Src/Sintetic Dataset Generator.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 697,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,20 +87,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 698,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_size = 10000"
+    "dataset_size = 10000\n",
+    "csv = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "products_available = ['AA', 'BB', 'CC', 'DD', 'EE']"
+    "dictionary = eval(open(\"../Data/normalized_dictionary.txt\", \"r\").read())\n",
+    "products_available = list(dictionary.keys())"
    ]
   },
   {
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 701,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 703,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 704,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,8 +328,11 @@
     "        bskt = \"\"\n",
     "        for item in basket:\n",
     "            bskt += item + \",\"\n",
-    "        for _ in range(max_basket_size - len(basket)):            \n",
-    "            bskt += \",\"\n",
+    "            \n",
+    "        if csv:\n",
+    "            for _ in range(max_basket_size - len(basket)):            \n",
+    "                bskt += \",\"\n",
+    "                \n",
     "        bskt = bskt[:-1]\n",
     "        file.write(bskt + \"\\n\")\n",
     "        \n",
@@ -344,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 706,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,12 +358,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "fname = \"test01.csv\"\n",
-    "export(dataset, \"../Data/sintetic/\" + fname, with_title=True)"
+    "export(dataset, \"../Data/sintetic/\" + fname, with_title=False)"
    ]
   },
   {
